org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/PortUsage_Invalid.sysml.xt
//*
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLTests
	ResourceSet {
		ThisFile {}
		File {from ="/library.kernel/Base.kerml"}
		File {from ="/library.kernel/BaseFunctions.kerml"}
		File {from ="/library.kernel/Objects.kerml"}
		File {from ="/library.kernel/Occurrences.kerml"}
		File {from ="/library.systems/Items.sysml"}
		File {from ="/library.systems/Parts.sysml"}
		File {from ="/library.systems/Ports.sysml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
				File {from ="/library.kernel/BaseFunctions.kerml"}
				File {from ="/library.kernel/Objects.kerml"}
				File {from ="/library.kernel/Occurrences.kerml"}
				File {from ="/library.systems/Items.sysml"}
				File {from ="/library.systems/Parts.sysml"}
				File {from ="/library.systems/Ports.sysml"}
			}
		}
	}
END_SETUP 
*/
package 'Port Example' {
	attribute def Vt;
	part def B;
	port def pd1;
	port def pd2;
	part def FA {
		// XPECT errors --> "A port must be typed by port definitions." at "port p1 : B;"
		port p1 : B;
		// XPECT errors --> "A port must be typed by port definitions." at "port p2 : Vt;"
		port p2 : Vt;

		port two_port_def_types: pd1, pd2;
	}
	part tank: FA {
		// XPECT errors --> "A port must be typed by port definitions." at "port pp redefines p1;"
		port pp redefines p1;
	}
}
